# projeto-final-poo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 05851b59761f_add_schedule_table.py  5da8659a117f_add_clients_and_services_tables.py  f43894a8e9e0_add_addresses_table.py
projeto_final_poo/: app.py
projeto_final_poo/custom_types/: annotated_types.py
projeto_final_poo/db/: connection.py  models.py  seed.py
projeto_final_poo/helpers/: exceptions.py  settings.py
projeto_final_poo/routers/: address.py  client.py  schedules.py  services.py
projeto_final_poo/schemas/: schemas.py
tests/: conftest.py  test_addresses.py  test_app.py  test_clients.py  test_db.py  test_schedule.py  test_services.py
