[tool.poetry]
name = "projeto-final-poo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = { extras = ["standard"], version = "^0.114.0" }
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ipython = "^8.27.0"
factory-boy = "^3.3.1"

[tool.taskipy.tasks]
dev = 'fastapi dev projeto_final_poo/app.py'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

migrate_upgrade = 'alembic upgrade head'
migrate_generate = 'alembic revision --autogenerate -m'
migrate = 'task migrate_generate'
post_migrate = 'task migrate_upgrade'

seed = 'python projeto_final_poo/db/seed.py'

coverage = 'coverage html'
pre_test = 'task lint'
test = 'pytest --cov=projeto_final_poo -vv'
post_test = 'task coverage'
pre_test_only = 'task lint'
test_only = 'pytest -vv'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
